# sshr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  main.rs  utils.rs
src/commands/: add.rs  connect.rs  history.rs  keys.rs  lint.rs  list.rs  mod.rs  remove.rs  search.rs  show.rs  status.rs  transfer.rs  trust.rs  tunnel.rs
src/config/: mod.rs  models.rs  parser.rs
src/utils/: color.rs
tests/: cli_tests.rs
