[package]
name = "sshr"
version = "0.2.0"
edition = "2024"
rust-version = "1.93"
authors = ["José Luis Castro Sola <calambrenet@codefriends.es>"]
description = "SSH Reimagined/Rust. A modern SSH connection manager"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/calambrenet/sshr"
homepage = "https://github.com/calambrenet/sshr"
keywords = ["ssh", "cli", "terminal", "devops"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.85"
nu-ansi-term = "0.50"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
